--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:theme="@style/Theme.PoliceBharti"
         tools:targetApi="31">
         <activity
+            android:name=".Question_Screen_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Show_All_District_questionActivity"
+            android:exported="false" />
+        <activity
             android:name=".YearSelectforDistrictwiseActivity"
             android:exported="false" />
         <activity
