--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -19,7 +19,16 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.PoliceBharti"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".TestFiveActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TestFourActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TestThreeActivity"
+            android:exported="false" />
         <activity
             android:name=".TestTwoActivity"
             android:exported="false" />
@@ -58,7 +67,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
