--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.PoliceBharti"
         tools:targetApi="31">
         <activity
+            android:name=".TestSixActivity"
+            android:exported="false" />
+        <activity
             android:name=".TestFiveActivity"
             android:exported="false" />
         <activity
