--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
         android:theme="@style/Theme.PoliceBharti"
         tools:targetApi="31">
         <activity
+            android:name=".EnglishSubjectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BhumetiActivity"
+            android:exported="false" />
+        <activity
             android:name=".Chalu_Ghada_Modi_Activity"
             android:exported="false" />
         <activity
