--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.PoliceBharti"
         tools:targetApi="31">
         <activity
+            android:name=".AiActivity"
+            android:exported="false" />
+        <activity
             android:name=".Chalu_Ghada_Modi_Activity"
             android:exported="false" />
         <activity
@@ -62,13 +65,10 @@
         <activity
             android:name=".Syllabus_PDF_Activity"
             android:exported="false" />
-
         <activity
             android:name=".HomeActivity"
-            android:exported="false"
-            android:enableOnBackInvokedCallback="true"/>
-
-
+            android:enableOnBackInvokedCallback="true"
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
